--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Index.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Index.cshtml
@@ -614,6 +614,6 @@
 
 @section Scripts {
     @{        
-        <script src="~/dist/site.entry.js" asp-append-version="true"></script>
+        <script src="~/dist/index.entry.js" asp-append-version="true"></script>
     }
 }
