--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Shared/_Layout.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Shared/_Layout.cshtml
@@ -4,15 +4,17 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - MVC.Budget.K_MYR</title>   
+    <title>@ViewData["Title"] - MVC.Budget.K_MYR</title>
     <script>
         window.userLocale = new Intl.Locale('@System.Globalization.CultureInfo.CurrentCulture.Name');
         window.userNumberFormat = new Intl.NumberFormat('@System.Globalization.CultureInfo.CurrentCulture.Name', { style: 'currency', currency: "EUR" });
     </script>
-    <link rel="stylesheet" href="~/dist/site.css" asp-append-version="true" />  
+
+    @await RenderSectionAsync("Stylesheets", false)
+
 </head>
-<body>   
-    <header>        
+<body>
+    <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-md">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">The Budgeteer</a>
@@ -117,7 +119,7 @@
             </div>
             <div class="sidebar-button-container" data-index="3">
                 <svg id="search-button" fill="transparent" version="1.1"
-                    width="45px" height="45px" viewBox="0 0 24 24">
+                     width="45px" height="45px" viewBox="0 0 24 24">
                     <path d="M11 6C13.7614 6 16 8.23858 16 11M16.6588 16.6549L21 21M19 11C19 15.4183 15.4183 19 11 19C6.58172 19 3 15.4183 3 11C3 6.58172 6.58172 3 11 3C15.4183 3 19 6.58172 19 11Z" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
             </div>
@@ -130,7 +132,6 @@
         </main>
     </div>
 
-    <script src="~/dist/site.entry.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", false)
 </body>
 </html>
