--- a/MVC.Budget.frockett/MVC.Budget.frockett/Views/Home/Index.cshtml
+++ b/MVC.Budget.frockett/MVC.Budget.frockett/Views/Home/Index.cshtml
@@ -6,3 +6,9 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+<div class="table-container">
+    <table id="transactionList" class="table table-hover">
+
+    </table>
+</div>
