--- a/MVC.Budget.frockett/MVC.Budget.frockett/wwwroot/css/site.css
+++ b/MVC.Budget.frockett/MVC.Budget.frockett/wwwroot/css/site.css
@@ -20,3 +20,31 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+#filter-form {
+    display: flex;
+    gap: 2rem;
+    justify-content: flex-start;
+}
+
+.filter-input {
+    border: 1px solid gray;
+    border-radius: 5px;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(3px);
+    z-index: 1;
+}
+
+.hidden {
+    display:none;
+}
