--- a/MVC.Budget.frockett/MVC.Budget.frockett/Views/Home/Index.cshtml
+++ b/MVC.Budget.frockett/MVC.Budget.frockett/Views/Home/Index.cshtml
@@ -30,8 +30,8 @@
                     </div>
                     <div class="form-group">
                         <label for="transactionCategory">Category</label>
-                        <select class="form-control" id="add-transactionCategory" required>
-                            <!-- Options will be populated dynamically -->
+                        <select class="form-control category-menu" id="add-transactionCategory" required>
+
                         </select>
                     </div>
                     <div class="form-group">
@@ -43,6 +43,42 @@
                         <input type="date" class="form-control" id="add-transactionDate" required>
                     </div>
                     <button type="submit" class="btn btn-primary" style="margin-top:1rem">Add Transaction</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal" id="editTransactionModal" tabindex="-1" role="dialog" aria-labelledby="editTransactionModalLabel" aria-hidden="true" style="display:none">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="editTransactionModalLabel">Edit Transaction</h5>
+                <button type="button" class="close" aria-label="Close" onclick="toggleEditModal()">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form id="editTransactionForm">
+                    <div class="form-group">
+                        <label for="edit-transactionTitle">Title</label>
+                        <input type="text" class="form-control" id="edit-transactionTitle" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="edit-transactionCategory">Category</label>
+                        <select class="form-control category-menu" id="edit-transactionCategory" required>
+                            <!-- Options will be populated dynamically -->
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="edit-transactionAmount">Amount</label>
+                        <input type="number" class="form-control" id="edit-transactionAmount" step="0.01" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="edit-transactionDate">Date</label>
+                        <input type="date" class="form-control" id="edit-transactionDate" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary" style="margin-top:1rem">Save Changes</button>
                 </form>
             </div>
         </div>
