--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/src/scss/site.scss
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/src/scss/site.scss
@@ -43,14 +43,14 @@ $pagination-disabled-color: #BDC3C7;
 @import "../../node_modules/bootstrap/scss/forms";
 //@import "../../node_modules/bootstrap/scss/buttons";
 //@import "../../node_modules/bootstrap/scss/transitions";
-//@import "../../node_modules/bootstrap/scss/dropdown";
+@import "../../node_modules/bootstrap/scss/dropdown";
 //@import "../../node_modules/bootstrap/scss/button-group";
 @import "../../node_modules/bootstrap/scss/nav";
 @import "../../node_modules/bootstrap/scss/navbar";
 @import "../../node_modules/bootstrap/scss/card";
 @import "../../node_modules/bootstrap/scss/accordion";
 //@import "../../node_modules/bootstrap/scss/breadcrumb";
-//@import "../../node_modules/bootstrap/scss/pagination";
+@import "../../node_modules/bootstrap/scss/pagination";
 //@import "../../node_modules/bootstrap/scss/badge";
 //@import "../../node_modules/bootstrap/scss/alert";
 @import "../../node_modules/bootstrap/scss/progress";
@@ -69,7 +69,7 @@ $pagination-disabled-color: #BDC3C7;
 //@import "../../node_modules/bootstrap/scss/helpers";
 
 // Utilities
-//@import "../../node_modules/bootstrap/scss/utilities/api";
+@import "../../node_modules/bootstrap/scss/utilities/api";
 
 // --- Custom Styles ---
 
@@ -322,8 +322,10 @@ body {
 // Main Container
 
 .main-container {
-    height: calc(100vh - 57px);
+    height: calc(100vh - 56px);
     width: 100vw;
+    padding-right: 0;
+    padding-left: 0;
 }
 
 main {
@@ -509,7 +511,7 @@ main {
 }
 
 .border-rotate {
-    background: radial-gradient(circle, rgba(74,1,105,1) 0%, rgba(0,44,255,1) 50%, rgba(163,23,23,1) 100%);
+    background: radial-gradient(circle, #CCFBE5 0%, #7EB1B1 25%, #608C94 50%, #7EB1B1 75%, #CCFBE5 100%);
     animation: rotate 4s cubic-bezier(.8, 0, 0.2, 1) infinite;
     opacity: 1;
 }
