--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Category.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Category.cshtml
@@ -1,5 +1,6 @@
 ﻿@using System.Globalization
-@model LayoutModel<Category>
+@model MVC.Budget.K_MYR.Models.ViewModels.LayoutModel<Category>
+
 
 @{
     ViewData["Title"] = "Category";
