--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/_TransactionModals.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/_TransactionModals.cshtml
@@ -1,16 +1,16 @@
 ﻿@model MVC.Budget.K_MYR.Models.Transaction;
 
 <section id="transaction-modals">
-    <div class="modal fade" id="add-transaction-modal" tabindex="-1" aria-labelledby="add-transaction-label" aria-hidden="true">
+    <div class="modal fade" id="addTransaction-modal" tabindex="-1" aria-labelledby="addTransaction-label" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title text-truncate text-center flex-grow-1" id="add-transaction-label">Add Transaction</h5>
+                    <h5 class="modal-title text-truncate text-center flex-grow-1" id="addTransaction-label">Add Transaction</h5>
                     <button type="button" class="btn-close bg-white" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <form id="add-transaction-form" method="post">
-                        <input type="hidden" asp-for="CategoryId" value="" />
+                        <input type="hidden" asp-for="CategoryId" id="addTransaction_categoryId" value="" />
                         <div class="form-group">
                             <label asp-for="Title" class="control-label"></label>
                             <input asp-for="Title" class="form-control" />
