--- a/MVC.Budget.frockett/MVC.Budget.frockett/wwwroot/css/site.css
+++ b/MVC.Budget.frockett/MVC.Budget.frockett/wwwroot/css/site.css
@@ -21,15 +21,31 @@ body {
   margin-bottom: 60px;
 }
 
+
 #filter-form {
     display: flex;
-    gap: 2rem;
+    gap: 1rem;
     justify-content: flex-start;
+
+    flex-wrap: wrap;
+    flex: 1 1 80px;
+    position: sticky;
+    top: 0;
+    padding: 1rem;
+    z-index: 2;
+    border-radius: 10px;
+}
+
+.scrolled {
+    background: #f5f5f5;
 }
 
 .filter-input {
-    border: 1px solid gray;
+    border: 1px solid ;
     border-radius: 5px;
+    
+    min-width: 80px;
+    flex-shrink: 1;
 }
 
 .overlay {
@@ -42,9 +58,17 @@ body {
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(3px);
-    z-index: 1;
+    z-index: 3;
 }
 
 .hidden {
     display:none;
+}
+
+.table-body {
+}
+
+.table-head {
+    position: sticky;
+    top: 0;
 }
