--- a/MVC.Budget.frockett/MVC.Budget.frockett/Views/Home/Index.cshtml
+++ b/MVC.Budget.frockett/MVC.Budget.frockett/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
         Add Transaction
     </button>
         <button type="button" class="btn btn-primary" onclick="toggleAddCategoryModal()">
-            Add Category
+            Manage Categories
         </button>
     </div>
 </form>
@@ -97,19 +97,52 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="addCategoryModalLabel">Add Category</h5>
+                <h5 class="modal-title" id="addCategoryModalLabel">Manage Categories</h5>
                 <button type="button" class="close" aria-label="Close" onclick="toggleAddCategoryModal()">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <form id="addCategoryForm">
+                <table class="table table-hover" id="categoryList">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <!-- Categories added dynamically -->
+                    </tbody>
+                </table>
+                <button type="button" class="btn btn-primary" style="margin-top:1rem" onclick="showAddCategoryForm()">Add Category</button>
+                <form id="addCategoryForm" style="display:none; margin-top:1rem; margin-bottom:0.5rem;">
                     <div class="form-group">
                         <label for="categoryName">Name</label>
                         <input type="text" class="form-control" id="add-categoryName" required>
                     </div>
-                    <button type="submit" class="btn btn-primary" style="margin-top:1rem">Add Category</button>
+                    <button type="submit" class="btn btn-primary" style="margin-top:0.5rem;">Save Category</button>
                 </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Confirmation Modal -->
+<div class="modal" id="confirmDeleteModal" tabindex="-1" role="dialog" aria-labelledby="confirmDeleteModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="confirmDeleteModalLabel">Confirm Deletion</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div id="confirm-delete-modal-body" class="modal-body">
+                Are you sure you want to delete this category? All associated transactions will also be deleted.
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" id="cancelDeleteButton" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" id="confirmDeleteButton">Delete</button>
             </div>
         </div>
     </div>
