--- a/MVC.Budget.frockett/MVC.Budget.frockett/Views/Home/Index.cshtml
+++ b/MVC.Budget.frockett/MVC.Budget.frockett/Views/Home/Index.cshtml
@@ -6,8 +6,12 @@
 <form id="filter-form">
     <div class="filters">
         <input type="text" class="filter-input" id="nameFilter" placeholder="Filter by name" oninput="filterTransactions()">
-        <input type="text" class="filter-input" id="categoryFilter" placeholder="Filter by category" oninput="filterTransactions()">
-        <input type="number" class="filter-input" id="amountFilter" placeholder="Filter by amount" oninput="filterTransactions()">
+        <select class="filter-input" id="categoryFilter" onchange="filterTransactions()">
+            <!-- Options will be populated dynamically -->
+        </select>
+        <input type="number" class="filter-input number-input" id="minAmountFilter" placeholder="Min" oninput="filterTransactions()">
+        <input type="number" class="filter-input number-input" id="maxAmountFilter" placeholder="Max" oninput="filterTransactions()">
+        <input type="date" class="filter-input" id="dateFilter" onchange="filterTransactions()">
     </div>
     <div class="top-buttons">
         <button type="button" class="btn btn-primary" data-toggle="modal" onclick="toggleAddModal()">
@@ -93,6 +97,26 @@
     </div>
 </div>
 
+<!-- Delete Transaction Confirmation Modal -->
+<div class="modal" id="confirmDeleteTransactionModal" tabindex="-1" role="dialog" aria-labelledby="confirmDeleteTransactionModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="confirmDeleteTransactionModalLabel">Confirm Deletion</h5>
+                <button type="button" class="close" id="cancelDeleteTransactionButton" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this transaction?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" id="confirmDeleteTransactionButton">Delete</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="modal" id="addCategoryModal" tabindex="-1" role="dialog" aria-labelledby="addCategoryModalLabel" aria-hidden="true" style="display:none">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
@@ -133,7 +157,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="confirmDeleteModalLabel">Confirm Deletion</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <button type="button" class="close" id="cancelDeleteButton" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
@@ -141,8 +165,29 @@
                 Are you sure you want to delete this category? All associated transactions will also be deleted.
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" id="cancelDeleteButton" data-dismiss="modal">Cancel</button>
                 <button type="button" class="btn btn-danger" id="confirmDeleteButton">Delete</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal" id="editCategoryModal" tabindex="-1" role="dialog" aria-labelledby="editCategoryModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="editCategoryModalLabel">Edit Category</h5>
+                <button type="button" class="close" id="cancelEditCategoryButton" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form id="editCategoryForm">
+                    <div class="form-group">
+                        <label for="edit-categoryName">Name</label>
+                        <input type="text" class="form-control" id="edit-categoryName" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary" style="margin-top: 1rem;">Save Changes</button>
+                </form>
             </div>
         </div>
     </div>
