--- a/MVC.Budget.frockett/MVC.Budget.frockett/Views/Home/Index.cshtml
+++ b/MVC.Budget.frockett/MVC.Budget.frockett/Views/Home/Index.cshtml
@@ -107,8 +107,8 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body">
-                Are you sure you want to delete this transaction?
+            <div id="confirmDeleteTransactionBody" class="modal-body">
+           
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger" id="confirmDeleteTransactionButton">Delete</button>
