added pointer for table header to indicated clickable

--- a/MVC.Budget.frockett/MVC.Budget.frockett/wwwroot/css/site.css
+++ b/MVC.Budget.frockett/MVC.Budget.frockett/wwwroot/css/site.css
@@ -80,6 +80,10 @@ table th.th-focus {
     border-radius: 10px;
 }
 
+table th:hover {
+    cursor: pointer;
+}
+
 .overlay {
     position: fixed;
     top: 0;
