--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/src/scss/site.scss
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/src/scss/site.scss
@@ -42,7 +42,7 @@ $pagination-disabled-color: #BDC3C7;
 @import "../../node_modules/bootstrap/scss/tables";
 @import "../../node_modules/bootstrap/scss/forms";
 //@import "../../node_modules/bootstrap/scss/buttons";
-//@import "../../node_modules/bootstrap/scss/transitions";
+@import "../../node_modules/bootstrap/scss/transitions";
 @import "../../node_modules/bootstrap/scss/dropdown";
 //@import "../../node_modules/bootstrap/scss/button-group";
 @import "../../node_modules/bootstrap/scss/nav";
@@ -79,6 +79,9 @@ body {
     color: white;
     margin: 0;
     padding: 0;
+    background-image: linear-gradient(45deg, #CCFBE5, #A2D6CB, #7EB1B1, #608C94, #456977);
+    background-size: cover;
+    background-position: center;
 }
 
 .form-control {
@@ -141,11 +144,7 @@ body {
 
 //Navbar
 
-.navbar {
-    background-image: linear-gradient(45deg, #CCFBE5, #A2D6CB, #7EB1B1, #608C94, #456977);
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
+.navbar { 
 }
 
 .navbar-brand, .nav-link {
@@ -336,6 +335,7 @@ main {
 // Flip Container
 
 .flip-container {
+    padding: 7px 0 7px 0;
     height: 100%;
     width: 100%;
 }
@@ -356,11 +356,7 @@ main {
     backface-visibility: hidden;
     height: 100%;
     width: 100%;
-    transform: rotateY(calc(90deg * var(--s))) translateZ(calc(50cqw));
-    background-image: linear-gradient(45deg, #CCFBE5, #A2D6CB, #7EB1B1, #608C94, #456977);
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
+    transform: rotateY(calc(90deg * var(--s))) translateZ(calc(50cqw));   
 }
 
 .content-outer-container {
@@ -682,6 +678,8 @@ main {
     border-radius: var(--bs-border-radius);
 }
 
+
+
 .irs {
     flex-grow: 1;
     margin-right: 5px;
@@ -737,13 +735,36 @@ main {
     text-align: center;
 }
 
+#transactions-table .table-icon {
+    fill: white;
+    opacity: 0.6;
+    cursor: pointer;
+    scale: 1.1;
+}
+
+#transactions-table .table-icon:hover {
+    scale: 1.3;
+    transition: scale 0.1s cubic-bezier(0.64, 0.57, 0.67, 1.3);
+}
+
+#transactions-table tr:hover .table-icon {
+    fill: url(#icon_gradient);
+    opacity: 1;
+    transform: scale(1.15);
+    transition: transform 0.3s cubic-bezier(0.64, 0.57, 0.67, 1.3), opacity 0.3s ease-out;
+}
+
+.dt-scroll:hover .dt-column-title {
+    background-image: linear-gradient(45deg, #CCFBE5, #A2D6CB, #7EB1B1);
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+}
+
 // Budget Selection
 
 #fiscalPlans-container {
-    background-image: linear-gradient(45deg, #CCFBE5, #A2D6CB, #7EB1B1, #608C94, #456977);
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
+    
 }
 
 .cards-container {
