Feat: Fix bugs introduced by implementing dynamic imports

--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Index.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
                         </div>
                     </div>
                 }
-                <div id="add-fiscalPlan-card" class="add-fiscalPlan-card">
+                <div id="addFiscalPlan-card" class="add-fiscalPlan-card">
                     <svg viewBox="0 0 14 14" height="23" width="23">
                         <g id="plus">                            
                             <path  fill-rule="evenodd" d="M8 1a1 1 0 0 0 -2 0v5H1a1 1 0 0 0 0 2h5v5a1 1 0 1 0 2 0V8h5a1 1 0 1 0 0 -2H8V1Z" clip-rule="evenodd" stroke-width="1"></path>
