--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/FiscalPlan.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/FiscalPlan.cshtml
@@ -49,7 +49,7 @@
                         <div class="dashboard">
                             <div class="dashboard-container">
                                 <div class="chart-container">
-                                    <canvas id="sentimentChart"</canvas>
+                                    <canvas id="sentimentChart"></canvas>
                                 </div>
                                 <div class="chart-container">
                                     <h1 class="text-center">My Budget</h1>
@@ -62,7 +62,7 @@
                                     </div>
                                 </div>
                                 <div class="chart-container">
-                                    <canvas id="necessityChart"</canvas>
+                                    <canvas id="necessityChart"></canvas>
                                 </div>
                             </div>
                         </div>
@@ -90,8 +90,7 @@
                                     <div class="accordion-caret rotate"></div>
                                 </div>
                                 <div id="collapseIncome" class="accordion-collapse collapse show" aria-labelledby="accordionIncomeHeader">
-                                    <div id="incomeAccordionBody" class="accordion-body">
-                                        @*
+                                    <div id="incomeAccordionBody" class="accordion-body">                                        
                                         @foreach (var category in fiscalPlanDTO.IncomeCategories)
                                         {                                            
                                             var progressbarWidth = Math.Min(100, category.Total / category.Budget * 100);
@@ -115,8 +114,7 @@
                                                     <div class="border-animation"></div>
                                                 </div>
                                             </div>
-                                        }
-                                        *@
+                                        }                                        
                                     </div>
                                 </div>
                             </div>
@@ -146,8 +144,7 @@
                                     <div class="accordion-caret rotate"></div>
                                 </div>
                                 <div id="collapseExpenses" class="accordion-collapse collapse show" aria-labelledby="accordionExpensesHeader">
-                                    <div id="expensesAccordionBody" class="accordion-body">
-                                        @*
+                                    <div id="expensesAccordionBody" class="accordion-body">                                        
                                         @foreach (var category in fiscalPlanDTO.ExpenseCategories)
                                         {
                                             var progressbarWidth = Math.Min(100, category.Total / category.Budget * 100);
@@ -178,8 +175,7 @@
                                                     <div class="border-animation"></div>
                                                 </div>
                                             </div>
-                                        }
-                                        *@
+                                        }                                        
                                     </div>
                                 </div>
                             </div>
