--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/_CategoryModals.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/_CategoryModals.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MVC.Budget.K_MYR.Models.Category;
 
 <section id="category-modals">
-    <div class="modal fade" id="add-category-modal" tabindex="-1" aria-labelledby="add-category-label" aria-hidden="true">
+    <div class="modal fade" id="addCategory-modal" tabindex="-1" aria-labelledby="add-category-label" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
