feat: add functions to homeDashboard class to add and remove categories; add small changes to dynamic imports

--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/FiscalPlan.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/FiscalPlan.cshtml
@@ -514,6 +514,7 @@
 
 @section Scripts {
     @{
+        <script src="~/dist/runtime.js" asp-append-version="true"></script>
         <script src="~/dist/vendors-index~fiscalPlan.js" asp-append-version="true"></script>
         <script src="~/dist/fiscalPlan.js" asp-append-version="true"></script>
     }
