--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Index.cshtml
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/Views/Home/Index.cshtml
@@ -43,6 +43,7 @@
 
 @section Scripts {
     @{
+        <script src="~/dist/runtime.js" asp-append-version="true"></script>
         <script src="~/dist/vendors-index~fiscalPlan.js" asp-append-version="true"></script>
         <script src="~/dist/index.js" asp-append-version="true"></script>
     }
