--- a/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/src/scss/site.scss
+++ b/MVC.Budget.K-MYR/MVC.Budget.K-MYR/ClientApp/src/scss/site.scss
@@ -16,6 +16,8 @@ $accordion-body-padding-x: 10px;
 $accordion-border-radius: 10px;
 $accordion-button-icon: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 15 15' fill='white'%3E%3Cdefs%3E%3CradialGradient id='gradient1' x1='0' x2='1' y1='0' y2='1'%3E%3Cstop offset='0%25' stop-color='%23CCFBE5' /%3E%3Cstop offset='50%25' stop-color='%23A2D6CB' /%3E%3Cstop offset='100%25' stop-color='%237EB1B1' /%3E%3C/radialGradient%3E%3C/defs%3E%3Cpath fill='url(%23gradient1)' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
 $accordion-icon-width: 20px;
+$accordion-icon-transition: transform 0.3s ease-in-out;
+
 
 $navbar-light-color: white;
 $navbar-light-brand-color: white;
@@ -114,11 +116,15 @@ body {
     border: 2px solid white;
 }
 
-.add-icon {
+.add-category-icon {
     box-sizing: content-box;
     margin-left: auto;
     height: 23px;
     width: 23px;
+}
+
+.add-category-icon * {
+    pointer-events: none;
 }
 
 .yearPicker .bi-calendar, .monthPicker .bi-calendar {
@@ -358,7 +364,7 @@ main {
     backface-visibility: hidden;
     height: 100%;
     width: 100%;
-    transform: rotateY(calc(90deg * var(--s))) translateZ(calc(50cqw));   
+    transform: rotateY(calc(90deg * var(--s))) translateZ(calc(55vw));   
 }
 
 .content-outer-container {
@@ -389,6 +395,7 @@ main {
     position: relative;
     background-clip: padding-box;
     border: solid $borderWidth transparent;
+    min-height: 328px;
 }
 
 .dashboard:before {
@@ -514,14 +521,13 @@ main {
     opacity: 1;
 }
 
-.overspending-text {
+.deviation-text {
     display: inline-block;
-    min-width: 180px;
+    margin-left: auto;
 }
 
 .balance-text {
     display: inline-block;
-    min-width: 160px;
     text-align: end;
 }
 
@@ -644,6 +650,7 @@ main {
 }
 
 .overspendingChart-container {
+    width: 100%;
     width: 100%;
     padding: 2px;
     min-height: 320px;
