--- a/MVC.Budget.Ananttuli/Budget/Views/Transactions/_PartialTransactionsList.cshtml
+++ b/MVC.Budget.Ananttuli/Budget/Views/Transactions/_PartialTransactionsList.cshtml
@@ -26,8 +26,7 @@
                             data-bs-target="#modal">
                         Edit
                     </button>
-                    <button onclick="showEditTransactionModal(@transaction.Id)" type="button" class="btn btn-danger" data-bs-toggle="modal"
-                            data-bs-target="#modal">
+                    <button onclick="deleteTransaction(@transaction.Id)" type="button" class="btn btn-danger">
                         Delete
                     </button>
                 </th>
